--- a/style.css
+++ b/style.css
@@ -12,22 +12,51 @@ p {
 .home-ani,body {
     background-color: #000
 }
-
+.first-main{
+    margin-top: 5%;
+}
 .home-ani {
     padding: 3% 10% 4%;
     width: 100%;
-    min-height: 100vh
+   
 }
+.gmail{
+   position: relative;
+   left: 50px;
+}
+#gmail{
+    position: relative;
+    left: 50px; 
+}
+.contact-container-2{
+    padding: 100px 0 !important;
+}
+.about-container-sania{
+    display: flex !important;
+ padding: 10% 5%;
 
+}
+.about-img{
+    width: 30%;
+    height: 30%;
+}
+.para-about{
+    padding: 10% 0 0 3%;
+}
 #content {
     position: absolute;
     top: 100%;
     display: none
 }
-
+.image-2-3{
+    width: 30%;
+    height: 100%;
+}
 .content-case,.home-container .navbar ul {
     display: flex;
-    justify-content: space-between
+    justify-content: space-between;
+   
+    
 }
 
 .content-case {
@@ -91,11 +120,11 @@ p {
     background-image: url(./assets/Image\ 2.png);
     background-size: cover;
     background-position: center;
-    width: 400px;  /* or whatever size you want */
-    height: 450px;
+    width: 30%;  /* or whatever size you want */
+    height: 50vh;
     position: relative; 
     overflow: hidden;  /* clip any overflow content */
-    right: 20px;
+  
    
 }
 .next{
@@ -105,9 +134,9 @@ p {
     position: absolute;
     top: 100%;
     left: 0;
-    width: 100%; 
-    height: 450px; 
-   /* right: 30px; */
+    width: 100%;  /* or whatever size you want */
+    height: 50vh;
+   
 }
 #candy-1,#candy-2,#candy-3 {
     position: relative;
@@ -468,22 +497,41 @@ p {
 .disable {
     display: none
 }
-
+.upper-img{
+    display: none;
+}
+@media screen and (min-width: 450px) and (max-width: 1024px) {
+    .content-case {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        text-align: center;
+    }
+}
 @media only screen and (max-width:450px) {
     .parent {
         grid-template-columns: 1fr
     }
+    .upper-img{
+        display: block;
+    }
     .inner-image{
         width: 100%;
-        height: 220px;
+        height: 38vh;
+    }
+    .image-2-3{
+        width: 90%;
     }
     .images-upper{
-        height: 220px;
+        height: 38vh;
     }
 
     .wrapper a {
+        
         font-size: .5rem
     }
+  
 
     p {
         font-size: .6rem!important
@@ -503,6 +551,16 @@ p {
 
     .down p,.up p {
         border-left: 2px solid #37352f
+    }
+    .about-container-sania{
+        display: flex !important;
+        flex-direction: column !important;
+     padding: 40% 5%;
+    
+    }
+    
+    .para-about{
+        padding: 3% 0 0 3%;
     }
 }
 
@@ -707,8 +765,12 @@ body {
     }
 
     .content-case {
-        gap: 30px;
-        padding: 5%
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        gap: 20px;
+        text-align: center;
     }
 
     .home_img {
