--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ p {
 .home-ani {
     padding: 3% 10% 4%;
     width: 100%;
+    min-height: fit-content;
    
 }
 .gmail{
@@ -526,6 +527,9 @@ p {
     .about-img{
         width: 70%;
     }
+    #candy-1,#candy-2{
+        margin-bottom: 3%;
+    }
     .upper-img{
         display: block;
     }
@@ -779,7 +783,8 @@ body {
     }
 
     .home-ani {
-        padding: 5% 3%
+        padding: 10% 7%;
+        
     }
 
     .name-study {
@@ -796,7 +801,10 @@ body {
     }
 
     .home_img {
-        gap: 10px
+     
+        grid-template-columns: 1fr;
+
+
     }
 
     .nav-list {
