--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ p {
     background-color: #000
 }
 .first-main{
-    margin-top: 5%;
+    margin-top: 1%;
 }
 .home-ani {
     padding: 3% 10% 4%;
@@ -24,27 +24,22 @@ p {
 .gmail{
 
    position: relative;
-   left: -7px;
+   left: -18px;
 }
 #gmail{
     position: relative;
     left: 50px ; 
 }
-.contact-container-2{
-    padding: 100px 0 !important;
-}
+
 .about-container-sania{
     display: flex !important;
- padding: 10% 5%;
+ padding: 10% 10% !important;
 
 }
-.about-img{
-    width: 30%;
-    height: 30%;
-}
+/* 
 .para-about{
     padding: 10% 0 0 3%;
-}
+} */
 #content {
     position: absolute;
     top: 100%;
@@ -524,6 +519,13 @@ p {
     .parent {
         grid-template-columns: 1fr
     }
+    .contact-container-2{
+       padding-top: 30% !important;
+       
+    }
+    .citizen-pr{
+        margin-top: 15%;
+    }
     .about-img{
         width: 70%;
     }
@@ -539,7 +541,7 @@ p {
     }
     #gmail{
         font-size: 0.8rem;
-        left: 20px !important;
+        left: 40px !important;
     }
     .image-2-3{
         width: 90%;
@@ -576,7 +578,7 @@ p {
     .about-container-sania{
         display: flex !important;
         flex-direction: column !important;
-     padding: 40% 5%;
+     padding: 20% 7% !important;
      align-items: center;
      text-align: justify;
     
@@ -645,7 +647,7 @@ body {
 
 .container-main img {
     width: 250px;
-    height: 250px
+    height: 270px
 }
 
 .container-main .description,.home-container {
@@ -659,7 +661,8 @@ body {
     padding: 1%;
     max-width: 800px;
     overflow: hidden;
-    font-size: 16px;
+    font-size: 17px;
+  
     flex: 1 1 auto
 }
 
@@ -697,7 +700,8 @@ body {
 .parent-cn {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 250px
+    gap: 20px;
+    margin-top: 40px;
 }
 
 .about-container,.flex-con {
@@ -708,7 +712,7 @@ body {
 
 .about-container p,.flex-con a {
     font-family: "noto sans";
-    font-size: 1.1rem;
+    
     color: #fff
 }
 
@@ -732,10 +736,18 @@ body {
     margin-top: 200px
 }
 
-.contact-container {
-    padding: 8% 8% 8%0
+.contact-container-2{
+   padding-top: 13%;
+   padding-right: 6%;
 }
-
+#contact-container{
+    padding-top: 4%;
+    padding-right: 6%;
+}
+.contact-h1{
+    margin: 0 0 3% 15%;
+    font-size: 2.5rem;
+}
 .toggle-btn {
     border: 0;
     opacity: 0;
@@ -753,6 +765,7 @@ body {
 
 .right {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center
 }
@@ -775,9 +788,16 @@ body {
     }
 
     .about-container p {
-        margin: 50px 0
+        margin: 50px 0;
+        font-size: 0.8rem !important;
     }
-    
+    .about-container{
+        padding-bottom: 5%;
+    }
+    .left{
+        position: relative;
+        right: 10px;
+    }
     .home-container .navbar {
         padding: 0 7%0 3%
     }
@@ -832,11 +852,15 @@ body {
 
     .parent-cn {
         grid-template-columns: 1fr;
-        gap: 30px
+        gap: 0;
     }
 
     .container-main {
-        margin-top: 80px
+        margin-top: 60px
+    }
+    .description{
+        font-size: 1rem !important;
+        padding: 0 2% !important;
     }
 }
 
