--- a/style.css
+++ b/style.css
@@ -21,15 +21,7 @@ p {
     min-height: fit-content;
    
 }
-.gmail{
 
-   position: relative;
-   left: -18px;
-}
-#gmail{
-    position: relative;
-    left: 50px ; 
-}
 
 .about-container-sania{
     display: flex !important;
@@ -364,6 +356,15 @@ p {
     grid-template-columns: 1fr 1fr;
     gap: 40px
 }
+.second-con{
+    position: relative;
+    right: 45px;
+    margin-top: 20px;
+}
+.third-con{
+    position: relative;
+    right: 80px;
+}
 
 .text-q {
     font-family: "noto sans";
@@ -424,14 +425,8 @@ p {
     position: relative;
     top: 18px
 }
-.link{
-    margin-right: 50px;
-}
-.link-in{
-    position: relative;
-    right: 40px;
-}
-    
+
+
 
 .foward a {
     color: #000
@@ -506,6 +501,9 @@ p {
 .upper-img{
     display: none;
 }
+#move{
+    right: 30px;
+}
 @media screen and (min-width: 450px) and (max-width: 1024px) {
     .content-case {
         display: flex;
@@ -539,10 +537,7 @@ p {
         width: 100%;
         height: 44vh;
     }
-    #gmail{
-        font-size: 0.8rem;
-        left: 40px !important;
-    }
+    
     .image-2-3{
         width: 90%;
     }
@@ -690,13 +685,7 @@ body {
     color: #969595
 }
 
-.link {
-    margin-right: 50px
-}
-.link-in{
-    position: relative;
-    right: 40px;
-}
+
 .parent-cn {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -794,9 +783,13 @@ body {
     .about-container{
         padding-bottom: 5%;
     }
+    .about-container img{
+        width: 250px;
+        height: 270px;
+    }
     .left{
         position: relative;
-        right: 10px;
+        right: 55px;
     }
     .home-container .navbar {
         padding: 0 7%0 3%
@@ -810,7 +803,17 @@ body {
     .name-study {
         font-size: 1.3rem
     }
-
+    .gmail{
+        position: relative;
+        right: 10px;
+    }
+    .second-con{
+        margin-top: 0;
+    }
+   .first-con{
+    position: relative;
+        right: 10px;
+    }
     .content-case {
         display: flex;
         flex-direction: column;
@@ -856,11 +859,15 @@ body {
     }
 
     .container-main {
-        margin-top: 60px
+        margin-top: 20px
     }
     .description{
         font-size: 1rem !important;
         padding: 0 2% !important;
+        
+    }
+    .contact-h1{
+        margin: 0 0 0 6%;
     }
 }
 
