--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ p {
     background-color: #000
 }
 .first-main{
-    margin-top: 1%;
+    margin-top: 7px;
 }
 .home-ani {
     padding: 3% 10% 4%;
