--- a/style.css
+++ b/style.css
@@ -685,11 +685,13 @@ body {
     justify-content: end;
     align-items: center;
     padding: 1% 9%0 0;
-   
+  
   
     
 }
-
+#navbar-sec{
+    margin-top: 10px;
+}
 .container-fluid {
     padding: 0
 }
